[package]
name = "verifier"
version = "0.1.0"
edition = "2018"
authors = [ "Troy Neubauer <troyneubauer@gmail.com>"]

[lib]
name = "verifier"
crate-type = ["cdylib"]


[dependencies]
serde = "1.0.130"
postcard = "0.7.2"
heapless = "0.7.5"
serde_json = "1.0"
toml = "0.5"

pyo3 = { version = "0.14", features = ["extension-module"] }
