[package]
name = "verifier"
version = "0.1.0"
edition = "2021"
authors = [ "Troy Neubauer <troyneubauer@gmail.com>"]

[lib]
name = "verifier"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.14", features = ["extension-module"] }
nova-verifier = { git = "https://github.com/ERFSEDS/nova-verifier.git" }
